tests/errors/8_uninitialized_errors/void-assign-2.java
/*
 * Původní autor testu: tým Dávid Bolvanského
 */
class Main {
    static void run() {
        int a = ifj16.print("Ahoj");
    }
}
